--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "dependencies": {
     "camelcase": "^6.3.0",
     "express": "^4.17.2",
-    "hbs": "^4.2.0"
+    "express-handlebars": "^6.0.2"
   }
 }
