--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "sass": "node-sass --watch resources/sass/app.scss -o static/css --output-style compressed"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "sass": "node-sass --watch resources/sass/app.scss -o static/css --output-style compressed",
+    "dev-sass": "npm start & npm run sass"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "multer": "^1.4.4",
-    "named-routes": "^2.0.7"
+    "named-routes": "^2.0.7",
+    "node-sass": "^7.0.1"
   }
 }
