--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "sass": "node-sass --watch resources/sass/app.scss -o static/css --output-style compressed",
+    "sass": "node-sass --watch resources/sass/app.scss -o public/css --output-style compressed",
     "dev-sass": "npm start & npm run sass"
   },
   "keywords": [],
@@ -16,10 +16,16 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "camelcase": "^6.3.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mongoose": "^6.2.4",
     "multer": "^1.4.4",
-    "named-routes": "^2.0.7",
+    "named-routes": "^2.0.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
     "node-sass": "^7.0.1"
   }
 }
