--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.4",
     "multer": "^1.4.4",
     "named-routes": "^2.0.7"
